--- a/resources/index.html
+++ b/resources/index.html
@@ -1,21 +1,101 @@
 <!DOCTYPE html>
-</style>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>ZeroTwo-Api</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: url("http://x.521002.xyz:7007/imgs");
+            background-color: rgba(255, 255, 255, 0.7); /* 背景透明度为0.7 */
+            color: #000; /* 文字颜色，这里使用黑色表示不透明 */
+            
+        }
+        .header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.7); /* 背景透明度为0.7 */
+            color: #fff; /* 文字颜色，这里使用黑色表示不透明 */
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: rgba(255, 255, 255, 0.7); /* 背景透明度为0.7 */
+            color: #000; /* 文字颜色，这里使用黑色表示不透明 */
+
+        }
+        .api-info {
+            margin-bottom: 20px;
+        }
+        .api-info h1 {
+            margin: 0;
+        }
+        .api-info p {
+            margin: 5px 0;
+        }
+        .api-endpoint {
+            background-color: rgba(255, 255, 255, 0); /* 背景透明度为0.7 */
+            color: #000; /* 文字颜色，这里使用黑色表示不透明 */
+            padding: 10px;
+            margin-top: 10px;
+        }
+        .api-endpoint h2 {
+            margin: 0;
+        }
+        .api-endpoint p {
+            margin: 5px 0;
+        }
+        .footer {
+            background-color: rgba(0, 0, 0, 0.7); /* 背景透明度为0.7 */
+            color: #fff; /* 文字颜色，这里使用黑色表示不透明 */
+            text-align: center;
+            padding: 10px 20px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-<p><strong>Api服务 - ZeroTwo-Api </strong></p>
-<hr>
-<table width="100%" border="1">
-<tbody><tr>
-<td>名字</td>
-<td>地址</td>
-</tr>
-<tr>
-<td>壁纸</td>
-<td><a href="http://api.521002.xyz/imgs"target="_blank">http://api.521002.xyz/imgs</td>
-</tr>
-<tr>
-<td>涩涩</td>
-<td><a href="http://api.521002.xyz/sese"target="_blank">http://api.521002.xyz/sese</td>
-</tr>
-</tbody></table>
-</body></html>
+
+    <div class="header">
+        <h1>Api服务 - ZeroTwo-Api</h1>
+    </div>
+
+    <div class="container">
+        <div class="api-info">
+            <h1>壁纸</h1>
+            <p>API描述：<span id="api-description">二次元壁纸</span></p>
+        </div>
+
+        <div class="api-endpoint">
+            <h2>API地址</h2>
+            <p>URL：<span id="api-url"><a href="http://api.521002.xyz/imgs"target="_blank">http://api.521002.xyz/imgs</span></a></p>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="api-info">
+            <h1>涩涩</h1>
+            <p>API描述：<span id="api-description">二次元涩涩</span></p>
+        </div>
+
+        <div class="api-endpoint">
+            <h2>API地址</h2>
+            <p>URL：<span id="api-url"><a href="http://api.521002.xyz/sese"target="_blank">http://api.521002.xyz/sese</span></a></p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>By ZeroTwo-Api <a href="https://github.com/Lovely02Y/Lovely-Api"target="_blank">版权所有</a></p>
+    </div>
+
+</body>
+</html>
