--- a/resources/index.html
+++ b/resources/index.html
@@ -8,7 +8,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url("http://x.521002.xyz:7007/imgs");
+            background: url("./imgs/bj.png");
             background-color: rgba(255, 255, 255, 0.7); /* 背景透明度为0.7 */
             color: #000; /* 文字颜色，这里使用黑色表示不透明 */
             
