--- a/resources/index.html
+++ b/resources/index.html
@@ -8,7 +8,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url("http://api.521002.xyz/imgs");
+            background: url("http://api.521002.xyz/tp/imgs");
             background-color: rgba(255, 255, 255, 0.7); /* 背景透明度为0.7 */
             color: #000; /* 文字颜色，这里使用黑色表示不透明 */
             
@@ -77,7 +77,7 @@
 
         <div class="api-endpoint">
             <h2>API地址</h2>
-            <p>URL：<span id="api-url"><a href="http://api.521002.xyz/imgs"target="_blank">http://api.521002.xyz/imgs</span></a></p>
+            <p>URL：<span id="api-url"><a href="http://api.521002.xyz/tp/imgs"target="_blank">http://api.521002.xyz/imgs</span></a></p>
         </div>
     </div>
 
@@ -89,7 +89,7 @@
 
         <div class="api-endpoint">
             <h2>API地址</h2>
-            <p>URL：<span id="api-url"><a href="http://api.521002.xyz/sese"target="_blank">http://api.521002.xyz/sese</span></a></p>
+            <p>URL：<span id="api-url"><a href="http://api.521002.xyz/tp/sese"target="_blank">http://api.521002.xyz/sese</span></a></p>
         </div>
     </div>
 
