--- a/resources/index.html
+++ b/resources/index.html
@@ -77,7 +77,7 @@
 
         <div class="api-endpoint">
             <h2>API地址</h2>
-            <p>URL：<span id="api-url"><a href="http://api.521002.xyz/tp/imgs"target="_blank">http://api.521002.xyz/imgs</span></a></p>
+            <p>URL：<span id="api-url"><a href="https://api.521002.xyz/tp/imgs"target="_blank">https://api.521002.xyz/tp/imgs</span></a></p>
         </div>
     </div>
 
@@ -89,7 +89,19 @@
 
         <div class="api-endpoint">
             <h2>API地址</h2>
-            <p>URL：<span id="api-url"><a href="http://api.521002.xyz/tp/sese"target="_blank">http://api.521002.xyz/sese</span></a></p>
+            <p>URL：<span id="api-url"><a href="https://api.521002.xyz/tp/sese"target="_blank">https://api.521002.xyz/tp/sese</span></a></p>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="api-info">
+            <h1>萝莉</h1>
+            <p>API描述：<span id="api-description">二次元萝莉</span></p>
+        </div>
+
+        <div class="api-endpoint">
+            <h2>API地址</h2>
+            <p>URL：<span id="api-url"><a href="https://api.521002.xyz/tp/loli"target="_blank">https://api.521002.xyz/tp/loli</span></a></p>
         </div>
     </div>
 
