--- a/resources/index.html
+++ b/resources/index.html
@@ -69,6 +69,18 @@
         <h1>Api服务 - ZeroTwo-Api</h1>
     </div>
 
+    <div class="container"></div>
+        <div class="api-info">
+            <h1>02</h1>
+            <p>API描述：<span id="api-description">02</span></p>
+        </div>
+
+        <div class="api-endpoint">
+            <h2>API地址</h2>
+            <p>URL：<span id="api-url"><a href="https://api.521002.xyz/tp/ZeroTwo"target="_blank">https://api.521002.xyz/tp/ZeroTwo</span></a></p>
+        </div>
+    </div>
+
     <div class="container">
         <div class="api-info">
             <h1>壁纸</h1>
