--- a/resources/index.html
+++ b/resources/index.html
@@ -69,7 +69,7 @@
         <h1>Api服务 - ZeroTwo-Api</h1>
     </div>
 
-    <div class="container"></div>
+    <div class="container">
         <div class="api-info">
             <h1>02</h1>
             <p>API描述：<span id="api-description">02</span></p>
